--- a/portfolio.html
+++ b/portfolio.html
@@ -15,34 +15,36 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="site-header">
-      <div class="container header-container">
-        <nav class="site-nav">
-          <a href="./" lang="en" class="logo"><span>Web</span>Studio</a>
-          <ul class="list header-list">
-            <li class="item">
-              <a href="./index.html" class="link">Студія</a>
+      <div class="container site-header__container">
+        <nav class="site-header__nav">
+          <a href="./" lang="en" class="logo">
+            <span class="logo__text">Web</span>Studio</a>
+          <ul class="list site-header__list">
+            <li class="site-header__item">
+              <a href="./index.html" class="site-header__link">Студія</a>
             </li>
-            <li class="item">
-              <a href="./portfolio.html" class="link current">Портфоліо</a>
+            <li class="site-header__item">
+              <a href="./portfolio.html" class="site-header__link  site-header__link--current">Портфоліо</a>
             </li>
-            <li class="item"><a href="" class="link">Контакти</a></li>
+            <li class="site-header__item"><a href="" class="site-header__link">Контакти</a></li>
           </ul>
         </nav>
-        <ul class="list contact-list">
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="link contact">
-              <svg class="contact-icon">
+        <ul class="list site-header__contact-list">
+          <li class="contact-list__item">
+            <a href="mailto:info@devstudio.com" class="contact-list__link">
+              <svg class="contact-list__icon">
                 <use href="./img/symbol-defs.svg#icon-envelope"></use>
               </svg>info@devstudio.com</a
             >
           </li>
-          <li class="item">
-            <a href="tel:+380961111111" class="link contact"
-              ><svg class="contact-icon">
+          <li class="contact-list__item">
+            <a href="tel:+380961111111" class="contact-list__link"
+              ><svg class="contact-list__icon">
                 <use href="./img/symbol-defs.svg#icon-smartphone"></use>
               </svg>+38 096 111 11 11</a
             >
@@ -265,56 +267,56 @@
       </section>
     </main>
     <footer class="site-footer">
-      <div class="container">
-        <div class="footer-addres">
-          <a href="/" lang="en" class="footer logo"><span>Web</span>Studio</a>
-          <address class="address">
-            <p class="address-text">м. Київ, пр-т Лесі Українки, 26</p>
-            <ul class="list footer-list">
-              <li class="footer-item">
-                <a href="mailto:info@devstudio.com" class="link address"
+      <div class="container site-footer__container">
+        <div>
+          <a href="/" lang="en" class="logo site-footer__logo"><span class="logo__text">Web</span>Studio</a>
+          <address class="site-footer__address">
+            <p class="site-footer__text">м. Київ, пр-т Лесі Українки, 26</p>
+            <ul class="list site-footer__list">
+              <li class="site-footer__item">
+                <a href="mailto:info@devstudio.com" class="site-footer__link"
                   >info@devstudio.com</a
                 >
               </li>
-              <li class="footer-item">
-                <a href="tel:+380961111111" class="link address"
+              <li class="site-footer__item">
+                <a href="tel:+380961111111" class="site-footer__link"
                   >+38 096 111 11 11</a
                 >
               </li>
             </ul>
           </address>
         </div>
-        <div class="footer-social">
-          <p class="social-title">Приєднуйтесь</p>
-          <ul class="list social-list">
-            <li class="item"><a class="link social-list-link" href="">
-              <svg class="footer-social-icon">
+        <div class="site-footer__social">
+          <p class="social__title">Приєднуйтесь</p>
+          <ul class="list social__list">
+            <li class="social__item"><a class="social__link" href="">
+              <svg class="social__icon">
                 <use href="./img/symbol-defs.svg#icon-instagram"></use>
               </svg>
             </a></li>
-            <li class="item"><a class="link social-list-link" href="">
-              <svg class="footer-social-icon">
+            <li class="social__item"><a class="social__link" href="">
+              <svg class="social__icon">
                 <use href="./img/symbol-defs.svg#icon-twitter"></use>
               </svg>
             </a></li>
-            <li class="item"><a class="link social-list-link" href="">
-              <svg class="footer-social-icon">
+            <li class="social__item"><a class="social__link" href="">
+              <svg class="social__icon">
                 <use href="./img/symbol-defs.svg#icon-facebook"></use>
               </svg>
             </a></li>
-            <li class="item"><a class="link social-list-link" href="">
-              <svg class="footer-social-icon">
+            <li class="social__item"><a class="social__link" href="">
+              <svg class="social__icon">
                 <use href="./img/symbol-defs.svg#icon-linkedin"></use>
               </svg>
             </a></li>
           </ul>
         </div>
         <div class="footer-signup">
-          <p class="form-title">Підпишіться на розсилку</p>
-          <form class="footer-form">
-            <input type="email" class="footer-input" name="signup-e-mail" placeholder="E-mail">
-            <button type="submit" value="" class="footer-button">Підписатися
-              <svg width="24" height="24" class="footer-form-icon">
+          <p class="footer-signup__title">Підпишіться на розсилку</p>
+          <form class="footer-signup__form">
+            <input type="email" class="footer-signup__input footer-signup__input" name="signup-e-mail" placeholder="E-mail">
+            <button type="submit" value="" class="footer-signup__button">Підписатися
+              <svg width="24" height="24" class="footer-signup__icon">
                 <use href="./img/symbol-defs.svg#icon-send"></use>
               </svg>
             </button>
